--- a/style.css
+++ b/style.css
@@ -1,17 +1,17 @@
 header{
     height: 30px;
     width: 100%;
-    background-color: rgba(162, 161, 161,0.6);
+    background-color: #edeff1;
     display: flex;
     justify-content: center;
     justify-content: space-around;
 }
-#a1{
+#h1{
     display: flex;
     color: black;
     align-self: center;
 }
-#a2{
+#h2{
     display: flex;
 }
 #language{
@@ -20,8 +20,7 @@ header{
     align-self: center;
     height: 25px;
     border: none;
-    margin-right: 50px;
-    
+    margin-right: 50px;  
 }
  #social{
     font-size: large;
@@ -33,12 +32,51 @@ header{
     height: 30px;
     background-color: rgb(109, 12, 194);
     color: white;
-    align-self: flex-end;
-    
+     
 }
 #quote:hover{
     height: 30px;
     background-color: rgba(109, 12, 194,0.7);
-    color: white;
+    color: white;   
+}
+
+section{
+    background-color:white;
+    display: flex;
+    height: 120px;
+    width: 100%;
+    justify-content: center;
+    justify-content: space-evenly;
+}
+#s1{
+    display: flex;
+    align-self: center;
+}
+#s2{
+    display: flex;
+    align-self: center;
+}
+.icon{
+    display: flex;
+    height: 35px;
+    width: 35px;
+    background-color: white;
+    align-self: center;
+    margin-right: 15px;
+    transform: rotate(45deg);
+    border: 1px solid black;
+    box-shadow: 1px 1px 3px black;
     
+}
+.icon i {
+    margin-left: 11px;
+    align-self: center;
+    transform: rotate(315deg);
+    
+}
+.text{
+    font-size: 14px;
+    line-height: 1px;
+    align-self: center;
+    margin-right: 25px;
 }
