--- a/style.css
+++ b/style.css
@@ -4,18 +4,20 @@ header{
     background-color: #edeff1;
     display: flex;
     justify-content: center;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 #h1{
     display: flex;
     color: black;
     align-self: center;
+    margin-left: 145px;
 }
 #h2{
     display: flex;
+    margin-right:145px ;
 }
 #language{
-    background-color: rgba(162, 161, 161,0.6);
+    background-color:  #edeff1;
     color: black;
     align-self: center;
     height: 25px;
@@ -46,15 +48,17 @@ section{
     height: 120px;
     width: 100%;
     justify-content: center;
-    justify-content: space-evenly;
+    justify-content: space-between;
 }
 #s1{
     display: flex;
     align-self: center;
+    margin-left: 140px;
 }
 #s2{
     display: flex;
     align-self: center;
+    margin-right:140px ;
 }
 .icon{
     display: flex;
@@ -64,8 +68,8 @@ section{
     align-self: center;
     margin-right: 15px;
     transform: rotate(45deg);
-    border: 1px solid black;
-    box-shadow: 1px 1px 3px black;
+    border: 1 px solid rgb(71, 70, 70);
+    box-shadow: 1px 1px 4px rgb(58, 58, 58);
     
 }
 .icon i {
@@ -79,4 +83,39 @@ section{
     line-height: 1px;
     align-self: center;
     margin-right: 25px;
+}
+
+.navbar ul{ 
+    height: 50px;
+    width: 80%;
+    margin: auto;
+    padding: 0px;
+    list-style-type: none;
+    background-color: rgb(4, 4, 107);
+    overflow: hidden;
+    display: flex;
+}
+.navbar a{
+    font-size: 20px;
+    color: white;
+    text-decoration: none;  
+    padding: 15px;   
+}
+.navbar li{
+    align-content: center;
+    float: left;
+}
+.navbar a:hover{
+    font-size: 20px;
+    color: rgba(255, 255, 255, 0.908);
+    background-color: rgb(109, 12, 194) ;
+    text-decoration: none;  
+    padding: 15px;   
+}
+#navicon{
+    color: white;
+    opacity: 0.8;
+    text-decoration: none;  
+    padding: 16px;   
+    margin-left: 335px;
 }
