--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+                 /* Section 1 */
 header{
     height: 30px;
     width: 100%;
@@ -5,6 +6,8 @@ header{
     display: flex;
     justify-content: center;
     justify-content: space-between;
+    position: static;
+    font-family: sans-serif;
 }
 #h1{
     display: flex;
@@ -27,21 +30,19 @@ header{
  #social{
     font-size: large;
     align-self: center;
-    margin-right: 25px;
-    
+    margin-right: 25px; 
  }
 #quote{
     height: 30px;
     background-color: rgb(109, 12, 194);
-    color: white;
-     
+    color: white;  
 }
 #quote:hover{
     height: 30px;
     background-color: rgba(109, 12, 194,0.7);
     color: white;   
 }
-
+                 /* Section 2 */
 section{
     background-color:white;
     display: flex;
@@ -49,6 +50,7 @@ section{
     width: 100%;
     justify-content: center;
     justify-content: space-between;
+    font-family: sans-serif;
 }
 #s1{
     display: flex;
@@ -85,22 +87,24 @@ section{
     margin-right: 25px;
 }
 
+                /* Section 3 */
 .navbar ul{ 
     height: 50px;
     width: 80%;
     margin: auto;
     padding: 0px;
     list-style-type: none;
-    background-color: rgb(6, 6, 105);
-    overflow: hidden;
     display: flex;
-    margin-bottom: -60px;
+    background-color: rgb(17, 17, 98);
+    overflow: hidden;
+    margin-bottom: -70px;
     position: relative;
     z-index: 1;
-    box-shadow: 0.4px 0.4px 1px rgb(198, 196, 196);
+    box-shadow: 0px 0px 1px rgb(198, 196, 196);
+    font-family: sans-serif;
 }
 .navbar a{
-    font-size: 20px;
+    font-size: 18px;
     color: white;
     text-decoration: none;  
     padding: 15px;   
@@ -110,7 +114,7 @@ section{
     float: left;
 }
 .navbar a:hover{
-    font-size: 20px;
+    font-size: 18px;
     color: rgba(255, 255, 255, 0.908);
     background-color: rgb(109, 12, 194) ;
     text-decoration: none;  
@@ -124,24 +128,36 @@ section{
     margin-left: 330px;
 }
 
+                 /* Section 4 */
 main{
     height: 700px;
     width: 100%;
     padding: 0px;
     margin: 0px;
     opacity: 1;
-    background-image: url(background.jpeg);
+    background-image: url(image1.jpeg);
     background-size: cover;
+    font-family: sans-serif;
 }
 h2{
-    width: 675px;
-    font-size: 60px;
+    width: 710px;
+    font-size: 56px;
     color: white;
     transform: translate(27px,220px);
 }
 #abtbtn{
+    background-color: white;
+    color: black;
     font-size: 15px;
     padding: 6px 25px;
+    transform: translate(70px, 170px);
+}
+#abtbtn:hover{
+    background-color: white;
+    color: black;
+    font-size: 15px;
+    padding: 6px 25px;
+    opacity: 0.6;
     transform: translate(70px, 170px);
 }
 #ousbtn{
@@ -151,4 +167,155 @@ h2{
     font-size: 15px;
     padding: 6px 25px;
     transform: translate(70px, 170px);
+}
+#ousbtn:hover{
+    color: white;
+    background-color:  rgb(109, 12, 194);
+    opacity: 0.7;
+    text-decoration: none;
+    font-size: 15px;
+    padding: 6px 25px;
+    transform: translate(70px, 170px);
+}
+
+                 /* Section 5 */
+#speaksection{
+    height: 120px;
+    width: 100%;
+    color: white;
+    background-color: rgb(17, 17, 98);
+    display: flex;
+    font-family: sans-serif;
+}
+#sepaksection div{
+    line-height: 1px;
+}
+#p1{
+    font-size: 25px;
+    margin: 0px;
+    transform: translate(80px,30px);
+}
+#p2{
+    font: 20px;
+    margin: 0px;
+    transform: translate(84px,20px);
+}
+#speaksection button{
+    height: 40px;
+    width: 120px;
+    margin-top: 30px;
+    margin-left:650px ;
+    color: white;
+    background-color: rgb(109, 12, 194);
+}
+#speaksection button:hover{
+    height: 40px;
+    width: 120px;
+    margin-top: 30px;
+    margin-left:650px ;
+    color: white;
+    opacity: 0.7;
+    background-color: rgb(109, 12, 194,);
+}
+
+                 /* Section 6 */
+h1{
+    text-align: center;
+    font-family: sans-serif;
+}
+#line{
+    height: 2px;
+    width: 45px;
+    background-color: purple;
+    border-radius: 20%;
+    margin: auto;
+}
+#aboutus p{
+    width: 60%;
+    font-size: 25px;
+    text-align: center;
+    margin: auto;
+    font-family: sans-serif;
+}
+#abtimg{
+    height: 300px;
+    width: 80%;
+    display: flex;
+    flex-wrap: wrap;
+    margin: auto;
+    background-color:white;
+    box-shadow: 1px 1px 5px grey; 
+    font-family: sans-serif;   
+}
+.abtus{
+    height: 290px;
+    width: 300px;
+    background-color: white;
+    margin: auto;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0px 20px; 
+    font-family: sans-serif;
+}
+.abtus:hover{
+    height: 290px;
+    width: 300px;
+    background-color: white;
+    margin: auto;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    display: flex;
+    flex-wrap: wrap;
+    color: white;
+    background-image: url(hover3.jpeg);
+    transform: scale(1.1);
+    background-size: cover;
+    padding: 0px 20px;
+}
+#abtus2{
+    height: 290px;
+    width: 300px;
+    background-color: white;
+    margin: auto;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0px 20px; 
+    color: white;
+    background-image: url(hover3.jpeg);
+    background-size: cover;
+    padding: 0px 20px;
+}
+#abtus2:hover{
+    height: 290px;
+    width: 300px;
+    background-color: white;
+    margin: auto;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0px 20px; 
+    color: white;
+    background-image: url(hover3.jpeg);
+    background-size: cover;
+    padding: 0px 20px;
+}
+#abtimg p{
+    height: 100px;
+    width: 300px;
+    font-size: 15px;
+    margin: 0px;
+    margin-top: 80px;
+}
+#abtimg h3{
+    margin-top: 50px;
+    transform: translate(20px,90px);
+}
+.abticon{
+    font-size: 40px;
+    transform: translate(130px, 70px);
 }
