--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
-                 /* Section 1 */
+*{
+    font-family: sans-serif;
+}                
+                
+                /* Header */
 header{
     height: 30px;
     width: 100%;
@@ -7,7 +11,6 @@ header{
     justify-content: center;
     justify-content: space-between;
     position: static;
-    font-family: sans-serif;
 }
 #h1{
     display: flex;
@@ -42,7 +45,7 @@ header{
     background-color: rgba(109, 12, 194,0.7);
     color: white;   
 }
-                 /* Section 2 */
+                 /* Section */
 section{
     background-color:white;
     display: flex;
@@ -50,7 +53,6 @@ section{
     width: 100%;
     justify-content: center;
     justify-content: space-between;
-    font-family: sans-serif;
 }
 #s1{
     display: flex;
@@ -87,7 +89,7 @@ section{
     margin-right: 25px;
 }
 
-                /* Section 3 */
+                /* Navbar*/
 .navbar ul{ 
     height: 50px;
     width: 80%;
@@ -101,7 +103,6 @@ section{
     position: relative;
     z-index: 1;
     box-shadow: 0px 0px 1px rgb(198, 196, 196);
-    font-family: sans-serif;
 }
 .navbar a{
     font-size: 18px;
@@ -128,7 +129,7 @@ section{
     margin-left: 330px;
 }
 
-                 /* Section 4 */
+                 /* Main Section*/
 main{
     height: 700px;
     width: 100%;
@@ -137,7 +138,6 @@ main{
     opacity: 1;
     background-image: url(image1.jpeg);
     background-size: cover;
-    font-family: sans-serif;
 }
 h2{
     width: 710px;
@@ -149,14 +149,14 @@ h2{
     background-color: white;
     color: black;
     font-size: 15px;
-    padding: 6px 25px;
+    padding: 8px 25px;
     transform: translate(70px, 170px);
 }
 #abtbtn:hover{
     background-color: white;
     color: black;
-    font-size: 15px;
-    padding: 6px 25px;
+    font-size: 15.5px;
+    padding: 8px 25px;
     opacity: 0.6;
     transform: translate(70px, 170px);
 }
@@ -165,7 +165,7 @@ h2{
     background-color:  rgb(109, 12, 194);
     text-decoration: none;
     font-size: 15px;
-    padding: 6px 25px;
+    padding: 8px 25px;
     transform: translate(70px, 170px);
 }
 #ousbtn:hover{
@@ -173,19 +173,18 @@ h2{
     background-color:  rgb(109, 12, 194);
     opacity: 0.7;
     text-decoration: none;
-    font-size: 15px;
-    padding: 6px 25px;
+    font-size: 15.5px;
+    padding: 8px 25px;
     transform: translate(70px, 170px);
 }
 
-                 /* Section 5 */
+                 /* Section 1 */
 #speaksection{
     height: 120px;
     width: 100%;
     color: white;
     background-color: rgb(17, 17, 98);
     display: flex;
-    font-family: sans-serif;
 }
 #sepaksection div{
     line-height: 1px;
@@ -218,14 +217,14 @@ h2{
     background-color: rgb(109, 12, 194,);
 }
 
-                 /* Section 6 */
+                 /* Section 2 */
 h1{
     text-align: center;
     font-family: sans-serif;
 }
 #line{
     height: 2px;
-    width: 45px;
+    width: 55px;
     background-color: purple;
     border-radius: 20%;
     margin: auto;
@@ -235,7 +234,6 @@ h1{
     font-size: 25px;
     text-align: center;
     margin: auto;
-    font-family: sans-serif;
 }
 #abtimg{
     height: 300px;
@@ -244,8 +242,7 @@ h1{
     flex-wrap: wrap;
     margin: auto;
     background-color:white;
-    box-shadow: 1px 1px 5px grey; 
-    font-family: sans-serif;   
+    box-shadow: 1px 1px 5px grey;   
 }
 .abtus{
     height: 290px;
@@ -257,7 +254,6 @@ h1{
     display: flex;
     flex-wrap: wrap;
     padding: 0px 20px; 
-    font-family: sans-serif;
 }
 .abtus:hover{
     height: 290px;
@@ -319,3 +315,160 @@ h1{
     font-size: 40px;
     transform: translate(130px, 70px);
 }
+
+                /* Section 3 */
+#section3{
+    height: 400px;
+    width: 100%;
+    background-image: url(bgimg.png);
+    background-size: cover;
+    opacity: 0.9;
+    display: flex;
+    flex-wrap: wrap;
+}
+#div1_s3{
+    height: 150px;
+    width: 100%;
+}
+#div1_s3 h2{
+    height: 100px;
+    width: 100%;
+    font-size: 35px;
+    text-align: center;
+    margin-top: -180px;
+    opacity: 0.9;
+}
+#div1_s3 h3{
+    color: white;
+    height: 100px;
+    width: 100%;
+    font-size: 30px;
+    text-align: center;
+    margin-top:170px;
+    opacity: 0.8;
+}
+#div2_s3{
+    height: 250px;
+    width: 100%;
+    display: flex;
+    color: white;
+    justify-content: space-evenly;
+    margin-top: 40px; 
+    padding: 0px; 
+}
+.icon_s3 i{
+    font-size: 35px;
+    opacity: 0.8;
+    margin-left: 68px;
+}
+.icon_s3 h1{
+    font-size: 45px;
+}
+.icon_s3 h5{
+    font-size: 18px;
+    margin-top: -20px;
+}
+#headphone{
+    margin-left: 35px;
+}
+#bookmark{
+    margin-left: 52px;
+}
+
+                /*Section 4 */
+#section4{
+    height: 500px;
+    width: 100%;
+}
+#data_s4{
+    height: 460px;
+    width: 80%;
+    display: flex;
+    flex-wrap: wrap;
+    margin: auto;
+}
+.s4{
+    height: 230px;
+    width: 300px;
+    margin: 0px;
+    padding: 0px;
+    flex-grow: 1; 
+}
+.iconbg{
+    height: 50px;
+    width: 50px;
+    background-color: rgb(109, 12, 194);
+    border-radius: 50%;
+    transform: translateY(30px);
+    margin-left: 10px;
+}
+.iconbg i{
+    color: white;
+    font-size: 20px;
+    transform:translate(15px,15px);
+}
+.s4 h3{
+    font-size: 22px;
+    text-align:left;
+    margin: auto;
+    padding-left:70px ;
+    margin-top: -4px;
+}
+.s4 p{
+    text-align: justify;
+    padding: 15px;
+    padding-left: 70px;
+    padding-right: 20px;
+    margin-top: -5px;
+}
+
+                /*Section 5 */
+#section5{
+    height: 500px;
+    width: 100%;
+    background-color:#edeff1;
+}
+#section5 h1{
+    text-align: center;
+    padding-top: 30px;
+    margin-bottom: -5px;
+}
+#section5 h4{
+    text-align: center;
+    padding-top: 0px;
+    margin-bottom: 50px;
+}
+#photos{
+    height: 300px;
+    width: 80%;
+    background-color: #edeff1;
+    display: flex;
+    flex-wrap: wrap;
+    margin: auto;
+}
+.idcard{
+    height: 300px;
+    width: 220px;
+    box-shadow: 0px 0px 10px rgb(97, 96, 96);
+    margin:auto;
+    background-color: rgb(17, 17, 98);
+    border-radius: 8px 8px 0px 0px;
+}
+.idcard img{
+    height:80%;
+    width:100%;
+    border-radius: 2px 2px 2px 2px;  
+}
+#name1 h3{
+    color: white;
+    opacity: 0.8;
+    text-align: center;
+    margin-top: 5px;
+}
+#name1 p{
+    color: white;
+    opacity: 0.8;
+    text-align: center;
+    margin-top: -18px;
+}
+
