--- a/style.css
+++ b/style.css
@@ -103,6 +103,7 @@ section{
     position: relative;
     z-index: 1;
     box-shadow: 0px 0px 1px rgb(198, 196, 196);
+    justify-content: space-between;
 }
 .navbar a{
     font-size: 17px;
@@ -427,6 +428,7 @@ h1{
     height: 500px;
     width: 100%;
     background-color:#edeff1;
+    margin-bottom: -30px;
 }
 #section5 h1{
     text-align: center;
@@ -476,7 +478,23 @@ h1{
 #contactform{
     height: 350px;
     width: 100%;
-    background-image: url(bgimg3.jpg);
+    background-image: url(bgimg2.jpg);
     background-size: cover;
-    
+    opacity: 0.9;
+    margin: 0px;
+    padding: 0px;
+}
+#contactform h3{
+    color: white;
+    text-align: center;
+    font-size: 30px;
+    padding-top: 30px;  
+    opacity: 0.8;
+}
+#contactform p{
+    color: white;
+    text-align: center;
+    margin-top:-18px;
+    opacity: 0.8;
+    line-height: 20px;
 }
