--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@ header{
     height: 30px;
     background-color: rgba(109, 12, 194,0.7);
     color: white;   
+    cursor: pointer; 
 }
                  /* Section */
 section{
@@ -160,6 +161,7 @@ h2{
     padding: 8px 25px;
     opacity: 0.6;
     transform: translate(70px, 170px);
+    cursor: pointer;
 }
 #ousbtn{
     color: white;
@@ -177,6 +179,7 @@ h2{
     font-size: 15.5px;
     padding: 8px 25px;
     transform: translate(70px, 170px);
+    cursor: pointer;
 }
 
                  /* Section 1 */
@@ -379,7 +382,8 @@ h1{
                 /*Section 4 */
 #section4{
     height: 500px;
-    width: 100%;
+    width: 80%;
+    margin: auto;
 }
 #data_s4{
     height: 460px;
@@ -387,6 +391,7 @@ h1{
     display: flex;
     flex-wrap: wrap;
     margin: auto;
+    margin-top: -30px;
 }
 .s4{
     height: 230px;
