--- a/style.css
+++ b/style.css
@@ -675,6 +675,30 @@ footer{
     opacity: 0.7;
     cursor: pointer;
 }
+#f_end{
+    height:40px;
+    width: 100%;
+    background-color:rgb(11, 11, 78);
+    display: flex;
+    flex-wrap: wrap;
+    
+}
+#f_end p{
+    margin-top: 0px;
+    transform: translate(60px,10px);
+    color: white;
+    opacity: 0.6;
+    margin-bottom: 0px;
+}
+#social_icons{
+    height: 25px;
+    margin-left: 1000px;
+    margin-bottom: 0px;
+    margin-top:5px ;
+}
+#social_icons a{
+    font-size: 28px;    
+}
 
 
 
