--- a/style.css
+++ b/style.css
@@ -33,7 +33,8 @@ header{
  #social{
     font-size: large;
     align-self: center;
-    margin-right: 25px; 
+    margin-right: 25px;
+    color: rgba(109, 12, 194,0.7); 
  }
 #quote{
     height: 30px;
@@ -697,7 +698,8 @@ footer{
     margin-top:5px ;
 }
 #social_icons a{
-    font-size: 28px;    
+    font-size: 28px;  
+    color: rgb(109, 12, 194);  
 }
 
 
