--- a/style.css
+++ b/style.css
@@ -274,6 +274,7 @@ h1{
     transform: scale(1.1);
     background-size: cover;
     padding: 0px 20px;
+    transition-duration: 0.4s;
 }
 #abtus2{
     height: 290px;
@@ -304,6 +305,7 @@ h1{
     background-image: url(Img/hover3.jpeg);
     background-size: cover;
     padding: 0px 20px;
+    transition: 0.6s;
 }
 #abtimg p{
     height: 100px;
